--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,10 @@ body, h1, h2, h3, h4, h5, p, figure, picture {
 
 /* Set up the body                          */
 body {
+    font-family: var(--ff-sans-normal);
+    font-size: var(--fs-400);
+    color: var(--color-neutral-white);
+    background-color: var(--color-primary-dark);
     line-height: 1.5;
     min-height: 100vh;
 }
@@ -35,8 +39,8 @@ select {
     font: inherit;
 }
 
-/* remove animations for people who have   */
-/* turned them off                         */
+/* remove animations for people who have    */
+/* turned them off                          */
 @media (prefers-reduced-motion: reduce) {
     *,
     *::before,
@@ -46,4 +50,117 @@ select {
         transition-duration: 0.01ms !important;
         scroll-behavior: auto !important;
     }
+}
+
+/* ---------------------------------------- */
+/* Variables                                */
+/* ---------------------------------------- */
+:root {
+    --gap: 1em;
+    --flow-space: 1em;
+
+    /* ----- Colors ----- */
+    --color-primary-light: hsl(212, 16%, 23%);
+    --color-primary-med: hsl(213, 25%, 19%);
+    --color-primary-dark: hsl(206, 45%, 11%);
+
+    --color-accent-light: hsl(31, 71%, 68%);
+    --color-accent-med: hsl(21, 40%, 48%);
+    --color-accent-dark: hsl(3, 42%, 11%);
+
+    --color-neutral-white: hsl(53 86% 92%);
+    --color-neutral-transparent: hsla(53, 85%, 92%, 0.25);
+
+    /* font-sizes */
+    --fs-900: 9.375rem;
+    --fs-800: 6.25rem;
+    --fs-700: 3.5rem;
+    --fs-600: 2rem;
+    --fs-500: 1.75rem;
+    --fs-400: 1.125rem;
+    --fs-300: 1rem;
+    --fs-200: 0.875rem;
+
+    /* font-families */
+    --ff-serif: "Gloock", serif;
+    --ff-sans-cond: "Roboto Condensed", sans-serif;
+    --ff-sans-normal: "Roboto", sans-serif;
+}
+
+
+/* ---------------------------------------- */
+/* Utility Classes                          */
+/* ---------------------------------------- */
+
+/* General                                  */
+
+.flex {
+    display: flex;
+    gap: var(--gap);
+}
+
+.grid {
+    display: grid;
+    gap: var(--gap);
+}
+
+.flow > * + *{
+    margin-top: var(--flow-space);
+}
+
+.container {
+    margin-inline: auto;
+    padding-inline: 2em;
+    max-width: 80rem;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
+/* colors                                 */
+
+.bg-dark{ background-color: var(--color-primary-dark);}
+.bg-accent{ background-color: var(--color-accent-light);}
+.bg-white{ background-color: var(--color-neutral-white);}
+.bg-transparent{ background-color: var(--color-neutral-transparent);}
+
+.text-dark{ color: var(--color-primary-dark);}
+.text-accent{ color: var(--color-accent-light);}
+.text-white{ color: var(--color-neutral-white);}
+
+/* typography                             */
+
+.ff-serif { font-family: var(--ff-serif); }
+.ff-sans-cond { font-family: var(--ff-sans-cond); }
+.ff-sans-normal { font-family: var(--ff-sans-normal); }
+
+.letter-spacing-1 { letter-spacing: 4.75px; }
+.letter-spacing-2 { letter-spacing: 2.7px; }
+.letter-spacing-3 { letter-spacing: 2.35px; }
+
+.uppercase { text-transform: uppercase; }
+
+.fs-900 { font-size: var(--fs-900); }
+.fs-800 { font-size: var(--fs-800); }
+.fs-700 { font-size: var(--fs-700); }
+.fs-600 { font-size: var(--fs-600); }
+.fs-500 { font-size: var(--fs-500); }
+.fs-400 { font-size: var(--fs-400); }
+.fs-300 { font-size: var(--fs-300); }
+.fs-200 { font-size: var(--fs-200); }
+
+.fs-900,
+.fs-800,
+.fs-700,
+.fs-600 {
+    line-height: 1.1;
 }
